[package]
name = "zookeepers"
version = "0.1.0"
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1.0"
serde_derive = "1.0"
byteorder = "1.3"


num-traits = "0.2"

# Enum goodies
num-derive = "0.2" # for enum From/ToPrimitive
strum = "0.15" # for iteration and a lot more
strum_macros = "0.15"
